# datasus_lelei

./: .cursorrules  .gitignore  AGENT.md  README.md  pyproject.toml
config/: .env.example
docs/: doc.md
notebooks/eda/: 00_first_eda.py  01_second_eda.py  02_second_eda_mensal.py  03_eda_taxa_populacao.py
notebooks/modeling/: 03_timeseries_drift.py
notebooks/processing/: 00_get_data.py  01_cleaning_cols.py  02_aggregate_data.py
reports/figures/timeseries_drift/: resumo_bayesiano.csv
reports/tables/: taxa_internacoes_100k_sul_sudeste.csv
